Fix comment layout so regardless of size, each is aligned and spaced evenly.
See activeadmin#6393

--- a/app/assets/stylesheets/active_admin/components/_comments.scss
+++ b/app/assets/stylesheets/active_admin/components/_comments.scss
@@ -3,10 +3,10 @@
 .comments {
 
   .active_admin_comment {
-    clear: both;
     margin-top: 10px;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     max-width: 700px;
+    @include clearfix;
 
     .active_admin_comment_meta {
       width: 130px;
